<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.gustavovargas.movilv20.menu">

    <Spinner
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/spinnerPaises1"
        tools:listitem="@layout/lista_paises"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:id="@+id/linearLayout5"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="40dp"
        android:gravity="center_vertical">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ibTestTeorico"
            android:text="@string/testteorico"
            android:src="@drawable/pruebateorico"
            android:onClick="callPruebaTeorica"
            android:background="@drawable/pruebateorico"
            android:gravity="center_horizontal|bottom"
            style="@style/BotoneMenu" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ibManual"
            android:text="@string/manual"
            android:src="@drawable/manual"
            android:onClick="callManual"
            android:background="@drawable/manual"
            android:layout_gravity="center_vertical"
            android:gravity="center_horizontal|bottom"
            style="@style/BotoneMenu"
            android:layout_marginTop="20dp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ibResultados"
            android:src="@drawable/resultados"
            android:layout_gravity="bottom"
            android:onClick="callResultados"
            android:background="@drawable/resultados"
            android:text="@string/resultados"
            android:gravity="center_horizontal|bottom"
            style="@style/BotoneMenu"
            android:layout_marginTop="20dp" />

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="40dp"
        android:gravity="center_vertical">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ibTestPractico"
            android:text="@string/testpractico"
            android:src="@drawable/pruebadinamica"
            android:onClick="callPruebaPractica"
            android:background="@drawable/pruebadinamica"
            style="@style/BotoneMenu"
            android:gravity="center_horizontal|bottom" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ibLugar"
            android:text="@string/sucursales"
            android:src="@drawable/lugares"
            android:onClick="callSucursales"
            android:background="@drawable/lugares"
            style="@style/BotoneMenu"
            android:gravity="center_horizontal|bottom"
            android:layout_marginTop="20dp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ibSugerencia"
            android:text="@string/sugerencias"
            android:src="@drawable/sujerencias"
            android:background="@drawable/sujerencias"
            android:onClick="callSugerencia"
            style="@style/BotoneMenu"
            android:gravity="center_horizontal|bottom"
            android:layout_marginTop="20dp" />
    </LinearLayout>

</RelativeLayout>
