<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.neyrojas.pmm.DetalleActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/nombreLugar"
        android:layout_marginTop="30sp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:layout_alignParentTop="true"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        style="@style/RedText"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/nombreLugar"
        android:textSize="40sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/descripcion"
        android:textAlignment="center"
        android:textStyle="normal|italic"
        style="@style/RedText"
        android:gravity="center_vertical|center_horizontal"
        android:textSize="22sp"
        android:text="@string/descripcion"
        android:layout_above="@+id/imageView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView"
        android:src="@drawable/noparquear"
        android:layout_centerVertical="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/maps"
        android:id="@+id/btnMap"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="30sp"
        android:onClick="callMap"
        android:layout_alignParentLeft="true"
        android:layout_toEndOf="@+id/descripcion"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:background="@drawable/azul"
        style="@style/BotoneMenu" />

</RelativeLayout>
