<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.neyrojas.pmm.estadisticas">

    <TabHost
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/thEstadisticas"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical">

            <TabWidget
                android:id="@android:id/tabs"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"></TabWidget>

            <FrameLayout
                android:id="@android:id/tabcontent"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                <LinearLayout
                    android:id="@+id/tab1"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:gravity="top">

                        <RelativeLayout
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textAppearance="?android:attr/textAppearanceSmall"
                                android:text="@string/fecha"
                                android:id="@+id/textView2"
                                android:layout_marginRight="20dp"
                                android:layout_alignParentLeft="true"
                                android:layout_marginLeft="0dp"
                                android:layout_alignParentTop="true"
                                android:layout_marginTop="0dp"
                                android:layout_alignParentStart="true" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textAppearance="?android:attr/textAppearanceSmall"
                                android:text="@string/tipo"
                                android:id="@+id/textView4"
                                android:layout_alignParentLeft="false"
                                android:layout_alignParentTop="false"
                                android:layout_toRightOf="@+id/textView2" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textAppearance="?android:attr/textAppearanceSmall"
                                android:text="@string/correctas"
                                android:id="@+id/textView6"
                                android:layout_alignParentLeft="false"
                                android:layout_alignParentTop="false"
                                android:layout_toLeftOf="@+id/textView3"
                                android:layout_marginRight="30dp" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textAppearance="?android:attr/textAppearanceSmall"
                                android:text="@string/incorrectas"
                                android:id="@+id/textView3"
                                android:layout_alignParentLeft="false"
                                android:layout_alignParentTop="false"
                                android:layout_toLeftOf="@+id/textView8"
                                android:layout_marginRight="30dp" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textAppearance="?android:attr/textAppearanceSmall"
                                android:text="@string/nota"
                                android:id="@+id/textView8"
                                android:layout_alignParentLeft="false"
                                android:layout_alignParentTop="false"
                                android:layout_alignParentEnd="true" />

                        </RelativeLayout>

                        <ListView
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/lv_todasNotas"
                            android:layout_marginTop="0dp" />

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/tab2"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent">

                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:gravity="top"
                        android:id="@+id/linearLayout">

                        <RelativeLayout
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content" >

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textAppearance="?android:attr/textAppearanceSmall"
                                android:text="@string/semana"
                                android:id="@+id/textView9"
                                android:layout_marginRight="20dp"
                                android:layout_alignParentLeft="true"
                                android:layout_marginLeft="0dp"
                                android:layout_alignParentTop="true"
                                android:layout_marginTop="0dp"
                                android:layout_alignParentStart="true" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textAppearance="?android:attr/textAppearanceSmall"
                                android:text="@string/tipo"
                                android:id="@+id/textView10"
                                android:layout_alignParentLeft="false"
                                android:layout_alignParentTop="false"
                                android:layout_toRightOf="@+id/textView9" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textAppearance="?android:attr/textAppearanceSmall"
                                android:text="@string/correctas"
                                android:id="@+id/textView11"
                                android:layout_alignParentLeft="false"
                                android:layout_alignParentTop="false"
                                android:layout_toLeftOf="@+id/textView12"
                                android:layout_marginRight="30dp" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textAppearance="?android:attr/textAppearanceSmall"
                                android:text="@string/incorrectas"
                                android:id="@+id/textView12"
                                android:layout_alignParentLeft="false"
                                android:layout_alignParentTop="false"
                                android:layout_toLeftOf="@+id/textView13"
                                android:layout_marginRight="30dp" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textAppearance="?android:attr/textAppearanceSmall"
                                android:text="@string/nota"
                                android:id="@+id/textView13"
                                android:layout_alignParentLeft="false"
                                android:layout_alignParentTop="false"
                                android:layout_alignParentEnd="true" />
                        </RelativeLayout>

                        <ListView
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/lv_semana"
                            android:layout_marginTop="0dp" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/tab3"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent">

                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:gravity="top"
                        android:id="@+id/linearLayout2" >

                        <RelativeLayout
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content" >

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textAppearance="?android:attr/textAppearanceSmall"
                                android:text="@string/mes"
                                android:id="@+id/textView5"
                                android:layout_marginRight="20dp"
                                android:layout_alignParentLeft="true"
                                android:layout_marginLeft="0dp"
                                android:layout_alignParentTop="true"
                                android:layout_marginTop="0dp"
                                android:layout_alignParentStart="true" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textAppearance="?android:attr/textAppearanceSmall"
                                android:text="@string/tipo"
                                android:id="@+id/textView14"
                                android:layout_alignParentLeft="false"
                                android:layout_alignParentTop="false"
                                android:layout_toRightOf="@+id/textView5" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textAppearance="?android:attr/textAppearanceSmall"
                                android:text="@string/correctas"
                                android:id="@+id/textView15"
                                android:layout_alignParentLeft="false"
                                android:layout_alignParentTop="false"
                                android:layout_toLeftOf="@+id/textView16"
                                android:layout_marginRight="30dp" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textAppearance="?android:attr/textAppearanceSmall"
                                android:text="@string/incorrectas"
                                android:id="@+id/textView16"
                                android:layout_alignParentLeft="false"
                                android:layout_alignParentTop="false"
                                android:layout_toLeftOf="@+id/textView17"
                                android:layout_marginRight="30dp" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textAppearance="?android:attr/textAppearanceSmall"
                                android:text="@string/nota"
                                android:id="@+id/textView17"
                                android:layout_alignParentLeft="false"
                                android:layout_alignParentTop="false"
                                android:layout_alignParentEnd="true" />
                        </RelativeLayout>

                        <ListView
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/lv_mes"
                            android:layout_marginTop="0dp" />
                    </LinearLayout>
                </LinearLayout>

            </FrameLayout>
        </LinearLayout>
    </TabHost>

</RelativeLayout>
